RbA Build/src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Mfg_Mull_Sequence__c</fullName>
        <description>The manufacturing mull sequence selected for this product.</description>
        <inlineHelpText>The manufacturing mull sequence selected for this product.</inlineHelpText>
        <label>Mfg Mull Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Charge_Parent_Unit_Id__c</fullName>
        <label>Miscellaneous Charge Parent Unit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mull_Sequence_Mullion__c</fullName>
        <description>The mull sequence mullion selected for this product.</description>
        <inlineHelpText>The mull sequence mullion selected for this product.</inlineHelpText>
        <label>Mull Sequence Mullion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSPR_Number__c</fullName>
        <label>NSPR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSPR/SPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_of_Bay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this product is a part of a bay window.</description>
        <inlineHelpText>Checked if this product is a part of a bay window.</inlineHelpText>
        <label>Part of Bay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_of_Bow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this product is a part of a bow window.</description>
        <inlineHelpText>Checked if this product is a part of a bow window.</inlineHelpText>
        <label>Part of Bow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perm_Applied_Int_Wood_Grille__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the permanently applied interior wood grille option was selected.</description>
        <inlineHelpText>Checked if the permanently applied interior wood grille option was selected.</inlineHelpText>
        <label>Perm Applied Int Wood Grille</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permanently_Applied_Interior_Wood_Grille__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the permanently applied interior wood grille option was selected.</description>
        <inlineHelpText>Checked if the permanently applied interior wood grille option was selected.</inlineHelpText>
        <label>Permanently Applied Interior Wood Grille</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pocket_Notch__c</fullName>
        <label>Pocket Notch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Reason__c</fullName>
        <label>Primary Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Component__c</fullName>
        <label>Problem Component</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grille Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grille Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrage/Interlock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weatherstip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mull Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overfit Flange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storm Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speciality Window Trim/Extension Jamb/Casing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bay/Bow Compenents (Specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brickmold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Compnent (Specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Cover (PW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL VALUES ENTERED FROM PIVOTAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The purchase order that covers this sales order line item</description>
        <inlineHelpText>The purchase order that covers this sales order line item</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quanity_Ordered__c</fullName>
        <label>Quanity Ordered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Detail_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Detail Id</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replacement_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Replacement Product</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Right_Leg_Fraction__c</fullName>
        <description>The right leg measurement fraction.</description>
        <inlineHelpText>The right leg measurement fraction.</inlineHelpText>
        <label>Right Leg Fraction</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_Leg_Inches__c</fullName>
        <description>The right leg in inches.</description>
        <inlineHelpText>The right leg in inches.</inlineHelpText>
        <label>Right Leg</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Description__c</fullName>
        <description>Allows the user enter a description of the dwelling&apos;s room for this product.</description>
        <inlineHelpText>Allows the user enter a description of the dwelling&apos;s room for this product.</inlineHelpText>
        <label>Room Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <description>Identifies the dwelling&apos;s room for this product.</description>
        <inlineHelpText>Identifies the dwelling&apos;s room for this product.</inlineHelpText>
        <label>Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Grille_Alignment__c</fullName>
        <description>The SW grille alignment selected for this product.</description>
        <inlineHelpText>The SW grille alignment selected for this product.</inlineHelpText>
        <label>SW Grille Alignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Height_Fraction__c</fullName>
        <description>The sales height measurement in fractions.</description>
        <inlineHelpText>The sales height measurement in fractions.</inlineHelpText>
        <label>Sales Height Fraction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Height_Inches__c</fullName>
        <description>The height of the opening as measured by sales in inches.</description>
        <inlineHelpText>The height of the opening as measured by sales in inches.</inlineHelpText>
        <label>Sales Height Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Width_Fraction__c</fullName>
        <description>The sales width measurement in fractions.</description>
        <inlineHelpText>The sales width measurement in fractions.</inlineHelpText>
        <label>Sales Width Fraction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Width_Inches__c</fullName>
        <description>The width of the opening as measured by sales in inches.</description>
        <inlineHelpText>The width of the opening as measured by sales in inches.</inlineHelpText>
        <label>Sales Width Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sash_Operation__c</fullName>
        <description>The Sash Operation selected for the product.</description>
        <inlineHelpText>The Sash Operation selected for the product.</inlineHelpText>
        <label>Sash Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sash_Ratio__c</fullName>
        <description>The Sash Ratio selected for the product.</description>
        <inlineHelpText>The Sash Ratio selected for the product.</inlineHelpText>
        <label>Sash Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Color__c</fullName>
        <description>The Screen Color selected for the product.</description>
        <inlineHelpText>The Screen Color selected for the product.</inlineHelpText>
        <label>Screen Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Type__c</fullName>
        <description>The screen type applied to the selected product.</description>
        <inlineHelpText>The screen type applied to the selected product.</inlineHelpText>
        <label>Screen Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Vaneer_Type__c</fullName>
        <description>The screen vaneer type applied to this product.</description>
        <inlineHelpText>The screen vaneer type applied to this product.</inlineHelpText>
        <label>Screen Vaneer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Reason__c</fullName>
        <label>Secondary Reason</label>
        <picklist>
            <controllingField>Primary_Reason__c</controllingField>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blinds/Shutters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbon Monoxide Detector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caulking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Mismatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grille Pattern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grille Pattern Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grille Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Trim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Fitting Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Select_Manufacturer__c</fullName>
        <label>Select Manufacturer</label>
        <picklist>
            <controllingField>Charge_Cost_To__c</controllingField>
            <picklistValues>
                <fullName>Andersen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayworld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RbA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADD ADDITIONAL IF NEEDED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sent_to_Baan_Date__c</fullName>
        <label>Sent to Baan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_to_Baan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Baan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Procedure_Code__c</fullName>
        <label>Service Procedure Code</label>
        <picklist>
            <picklistValues>
                <fullName>100 Unit: Caulking, Silicone, VTV, Repair or Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105 Unit Fibrex: Chip/Crack/Surface Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110 Unit: Repalce/Reinstall Frame or Unit (Actual Time Spent)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>115 Unit: Clean Unit (Requires Description)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Unit: Lubrication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125 Screen: Wing Blade or Grommet Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130 Screen: Modify or rescreen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>135 Screen: Reqplacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEED TO ADD ADDITIONAL VALUES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Product_Note__c</fullName>
        <label>Service Product Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Sympton__c</fullName>
        <label>Service Sympton</label>
        <picklist>
            <picklistValues>
                <fullName>Bowed/Warped/Twisted/Bent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrosion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Height Too Tall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stress Cracked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Height To Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sagging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color/Finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weidth To Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Leakage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Width Too Narrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fillet Bead/Caulking/Silicone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bay/Bow Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gouged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEED TO ADD IN ADDITIONAL VALUES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this product was created from a Service Order.</inlineHelpText>
        <label>Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sill_Angle__c</fullName>
        <description>The Sill Angle selected for the product.</description>
        <inlineHelpText>The Sill Angle selected for the product.</inlineHelpText>
        <label>Sill Angle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to enable the special option fields</description>
        <inlineHelpText>Check to enable the special option fields</inlineHelpText>
        <label>Special Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty_Shape__c</fullName>
        <description>Choose the specialty shape for the window.</description>
        <inlineHelpText>Choose the specialty shape for the window.</inlineHelpText>
        <label>Specialty Shape</label>
        <picklist>
            <picklistValues>
                <fullName>Equal Leg Arch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pentagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peak Pentagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hexagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Springline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trapezoid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unequal Leg Arch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Springline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spokes__c</fullName>
        <description>The number of spokes selected for the product.</description>
        <inlineHelpText>The number of spokes selected for the product.</inlineHelpText>
        <label>Spokes</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the order line item.</description>
        <inlineHelpText>The status of the order line item.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Configured</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storm_Window_Color__c</fullName>
        <description>The Storm Window Color selected for the product.</description>
        <inlineHelpText>The Storm Window Color selected for the product.</inlineHelpText>
        <label>Storm Window Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storm_Window_Style__c</fullName>
        <description>The storm window style selected for the product.</description>
        <inlineHelpText>The storm window style selected for the product.</inlineHelpText>
        <label>Storm Window Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storm_Window__c</fullName>
        <description>The storm window selected for the product.</description>
        <inlineHelpText>The storm window selected for the product.</inlineHelpText>
        <label>Storm Window</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this particular product qualifies for a tax credit.</description>
        <inlineHelpText>Check if this particular product qualifies for a tax credit.</inlineHelpText>
        <label>Tax Credit Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tempered_S1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the glass for Sash 1 of this product is tempered.</description>
        <inlineHelpText>Checked if the glass for Sash 1 of this product is tempered.</inlineHelpText>
        <label>Tempered S1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tempered_S2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the glass for Sash 2 of this product is tempered.</description>
        <inlineHelpText>Checked if the glass for Sash 2 of this product is tempered.</inlineHelpText>
        <label>Tempered S2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tempered_S3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the glass for Sash 3 of this product is tempered.</description>
        <inlineHelpText>Checked if the glass for Sash 3 of this product is tempered.</inlineHelpText>
        <label>Tempered S3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Retail_Price__c</fullName>
        <description>The total retail price for this order item (quantity &amp; retail price)</description>
        <formula>Quantity *  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total retail price for this order item (quantity &amp; retail price)</inlineHelpText>
        <label>Total Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Wholesale_Cost__c</fullName>
        <description>The total wholesale cost for this line item.</description>
        <formula>(Unit_Wholesale_Cost__c - Discount_Amount__c) * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total wholesale cost for this line item.</inlineHelpText>
        <label>Total Wholesale Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Remake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Id__c</fullName>
        <description>The number used to identify the opening(window or door) location for this product</description>
        <inlineHelpText>The number used to identify the opening(window or door) location for this product</inlineHelpText>
        <label>Unit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Wholesale_Cost__c</fullName>
        <description>The wholesale cost of the product</description>
        <inlineHelpText>The wholesale cost of the product</inlineHelpText>
        <label>Wholesale Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>Used to describe how the quantity of a Cost PO line item is figured.</description>
        <inlineHelpText>Used to describe how the quantity of a Cost PO line item is figured.</inlineHelpText>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Variant_Number__c</fullName>
        <description>The variant number received for the product from manufacturing</description>
        <inlineHelpText>The variant number received for the product from manufacturing</inlineHelpText>
        <label>Variant Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verify_Item_Configuration__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if you want to verify the product configuration against the makeability rules.</description>
        <inlineHelpText>Check if you want to verify the product configuration against the makeability rules.</inlineHelpText>
        <label>Verify Item Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wide_Bar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the wide Bar grille option was selected.</description>
        <inlineHelpText>Checked if the wide Bar grille option was selected.</inlineHelpText>
        <label>Wide Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Width_Fraction__c</fullName>
        <description>The width measurement in fraction.</description>
        <inlineHelpText>The width measurement in fraction.</inlineHelpText>
        <label>Width Fraction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width_Inches__c</fullName>
        <description>The actual width measurement in inches.</description>
        <inlineHelpText>The actual width measurement in inches.</inlineHelpText>
        <label>Width Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>